Fix inpage details layout on IE11

--- a/app/assets/styles/core/_ie11-fixes.scss
+++ b/app/assets/styles/core/_ie11-fixes.scss
@@ -86,4 +86,23 @@
     }
   }
 
+  .inpage__details {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 0;
+
+    > * {
+      @include column(3/12, $cycle: 4);
+      margin: ($global-spacing * 2) 0 0 0;
+
+
+      &:nth-child(1),
+      &:nth-child(2),
+      &:nth-child(3),
+      &:nth-child(4) {
+        margin-top: 0;
+      }
+    }
+  }
+
 }
